# tree-sitter

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  grammar.js  index.js  language.md  package-lock.json  package.json  tree-sitter.json
.github/workflows/: publish.yml
behavior/: grammar.js  tree-sitter.json
behavior/queries/: highlights.scm
behavior/src/: grammar.json  node-types.json  parser.c  scanner.c
behavior/test/corpus/: basic.txt
bindings/rust/src/: lib.rs
docs/concepts/: design-principles.md  ecosystem.md  roadmap.md
docs/guides/: packaging.md
docs/reference/: behavior.md  manifest.md  types.md
examples/builder/: builder.behavior  builder.description  test.behavior
examples/car renting/: car renting.description  main.behavior  travel (call car renting).behavior
examples/doctor/: doctor.agent  doctor.description  doctor.flow
examples/figma/: figma.agent  figma.flow
examples/mickey/: mickey.agent  mickey.description  mickey.flow
flow/: grammar.js
flow/queries/: highlights.scm
flow/src/: grammar.json  node-types.json  parser.c  scanner.c
flow/test/corpus/: basic.txt
queries/: highlights.scm
scripts/: clean.js
src/: parser.c  scanner.c
test/agents/FinancialAnalyst/: FinancialAnalyst.description
test/agents/MedicalTriage/: MedicalTriage.description
test/agents/TravelConcierge/: TravelConcierge.description
test/corpus/: types.txt
